--- a/src/main/res/layout/formtemplate_textlabel.xml
+++ b/src/main/res/layout/formtemplate_textlabel.xml
@@ -23,4 +23,5 @@
 <com.nextgis.maplibui.formcontrol.TextLabel xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+    android:textStyle="bold" />
