--- a/src/main/res/layout/bottombar.xml
+++ b/src/main/res/layout/bottombar.xml
@@ -29,7 +29,7 @@
                                              android:layout_width="match_parent"
                                              android:minHeight="?attr/actionBarSize"
                                              android:background="?attr/colorPrimary"
-                                             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                                             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                                              app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                                              android:layout_gravity="bottom"
                                              android:layout_alignParentBottom="true"
