--- a/src/main/res/layout/fragment_compass.xml
+++ b/src/main/res/layout/fragment_compass.xml
@@ -26,7 +26,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/colorPrimaryDark">
+    android:background="?attr/colorPrimary">
 
     <com.nextgis.maplibui.util.BubbleSurfaceView
         android:id="@+id/bubble_view"
