--- a/src/main/res/layout/fragment_location_panel.xml
+++ b/src/main/res/layout/fragment_location_panel.xml
@@ -92,6 +92,7 @@
     </LinearLayout>
 
     <FrameLayout
+        android:id="@+id/accurate_location_panel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
