--- a/src/main/res/layout/actionbar.xml
+++ b/src/main/res/layout/actionbar.xml
@@ -31,6 +31,6 @@
                                    android:background="?attr/colorPrimary"
                                    android:theme="?ThemeOverlay.NextGIS.Toolbar"
                                    app:popupTheme="?ThemeOverlay.NextGIS.ToolbarPopup"
-                                   android:elevation="2dp"
+                                   app:elevation="2dp"
     >
 </android.support.v7.widget.Toolbar>
