--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -42,6 +42,7 @@
     <attr name="ic_action_refresh" format="reference"/>
     <attr name="ic_apply" format="reference"/>
     <attr name="ic_cancel" format="reference"/>
+    <attr name="layer_list_background" format="reference"/>
 
     <style name="Theme.NextGIS.AppCompat.Light"
            parent="Theme.AppCompat.Light.NoActionBar">
@@ -80,6 +81,7 @@
         <item name="ic_action_refresh">@drawable/ic_action_refresh_light</item>
         <item name="ic_apply">@drawable/ic_action_apply_light</item>
         <item name="ic_cancel">@drawable/ic_action_cancel_light</item>
+        <item name="layer_list_background">@color/textColor.Dark</item>
 
         <item name="DatePickSpinnerBackground">@drawable/ic_spinner_calendar_light</item>
     </style>
@@ -93,7 +95,7 @@
         <item name="undoBarStyle">@style/UndoBarMaterialStyle</item>
         <item name="windowActionBarOverlay">true</item>
         <item name="windowActionModeOverlay">true</item>
-        <item name="ThemeOverlay.NextGIS.Toolbar">@style/Theme.NextGIS.AppCompat.ActionBar</item>
+        <item name="ThemeOverlay.NextGIS.Toolbar">@style/Theme.NextGIS.AppCompat.ActionBar.Dark</item>
         <item name="ThemeOverlay.NextGIS.ToolbarPopup">@style/ThemeOverlay.NextGIS.AppCompat.Dark</item>
         <item name="android:textColorPrimary">@color/textColorPrimary.Dark</item>
         <item name="android:textColorSecondary">@color/textColorSecondary.Dark</item>
@@ -121,6 +123,7 @@
         <item name="ic_action_refresh">@drawable/ic_action_refresh_dark</item>
         <item name="ic_apply">@drawable/ic_action_apply_dark</item>
         <item name="ic_cancel">@drawable/ic_action_cancel_dark</item>
+        <item name="layer_list_background">@color/textColor.Light</item>
 
         <item name="DatePickSpinnerBackground">@drawable/ic_spinner_calendar_dark</item>
     </style>
@@ -141,6 +144,10 @@
         <!--item name="android:textColorSecondary">@color/textColorSecondary.Light</item-->
         <item name="colorControlHighlight">@color/accent</item>
         <item name="colorControlNormal">@color/textColorSecondaryInverse.Light</item>
+    </style>
+
+    <style name="Theme.NextGIS.AppCompat.ActionBar.Dark" parent="Theme.NextGIS.AppCompat.ActionBar">
+        <item name="android:textColor">@color/textColorPrimary.Dark</item>
     </style>
 
     <style name="ThemeOverlay.NextGIS.AppCompat.Light" parent="ThemeOverlay.AppCompat.Light">
