--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -82,6 +82,7 @@
         <item name="ic_apply">@drawable/ic_action_apply_light</item>
         <item name="ic_cancel">@drawable/ic_action_cancel_light</item>
         <item name="layer_list_background">@color/textColor.Dark</item>
+        <item name="android:alertDialogStyle">@style/Theme.NextGIS.AppCompat.Light.Dialog</item>
 
         <item name="DatePickSpinnerBackground">@drawable/ic_spinner_calendar_light</item>
     </style>
@@ -124,6 +125,7 @@
         <item name="ic_apply">@drawable/ic_action_apply_dark</item>
         <item name="ic_cancel">@drawable/ic_action_cancel_dark</item>
         <item name="layer_list_background">@color/textColor.Light</item>
+        <item name="android:alertDialogStyle">@style/Theme.NextGIS.AppCompat.Dialog</item>
 
         <item name="DatePickSpinnerBackground">@drawable/ic_spinner_calendar_dark</item>
     </style>
@@ -168,11 +170,12 @@
         <item name="android:textColorSecondaryInverse">@color/textColorSecondaryInverse.Dark</item>
     </style>
 
-    <style name="Theme.NextGIS.AppCompat.Light.Dialog"
-           parent="Base.Theme.AppCompat.Light.Dialog">
+    <style name="Theme.NextGIS.AppCompat.Light.Dialog" parent="Base.Theme.AppCompat.Light.Dialog.Alert">
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">@color/accent</item>
         <item name="isLightTheme">true</item>
         <item name="windowActionBarOverlay">false</item>
-        <item name="android:textColor">@color/textColor.Light</item>
         <!-- Action Mode -->
         <item name="actionModeCutDrawable">@drawable/ic_action_content_cut</item>
         <item name="actionModeCopyDrawable">@drawable/ic_action_content_copy</item>
@@ -180,8 +183,22 @@
         <item name="actionModeSelectAllDrawable">@drawable/ic_action_content_select_all</item>
         <item name="actionModeShareDrawable">@drawable/ic_action_social_share</item>
 
-        <item name="android:panelBackground">@color/background_material_light</item>
-        <item name="panelBackground">@drawable/abc_menu_hardkey_panel_mtrl_mult</item>
+        <item name="listChoiceBackgroundIndicator">@drawable/abc_list_selector_holo_light</item>
+    </style>
+
+    <style name="Theme.NextGIS.AppCompat.Dialog" parent="Base.Theme.AppCompat.Dialog.Alert">
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">@color/accent</item>
+        <item name="isLightTheme">false</item>
+        <item name="windowActionBarOverlay">false</item>
+        <!-- Action Mode -->
+        <item name="actionModeCutDrawable">@drawable/ic_action_content_cut</item>
+        <item name="actionModeCopyDrawable">@drawable/ic_action_content_copy</item>
+        <item name="actionModePasteDrawable">@drawable/ic_action_content_paste</item>
+        <item name="actionModeSelectAllDrawable">@drawable/ic_action_content_select_all</item>
+        <item name="actionModeShareDrawable">@drawable/ic_action_social_share</item>
+
         <item name="listChoiceBackgroundIndicator">@drawable/abc_list_selector_holo_light</item>
     </style>
 
