--- a/src/main/res/layout/sdf_layout.xml
+++ b/src/main/res/layout/sdf_layout.xml
@@ -40,42 +40,50 @@
             android:id="@+id/title"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:padding="10dp"
-            android:background="?attr/sdf_titleBackground"
-            android:orientation="horizontal"
+            android:orientation="vertical"
+            android:visibility="gone"
             >
 
-            <ImageView
-                android:id="@+id/title_icon"
+            <LinearLayout
                 android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:layout_marginRight="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_gravity="center_vertical"
-                android:visibility="gone"
-                />
+                android:layout_width="match_parent"
+                android:padding="10dp"
+                android:background="?attr/sdf_titleBackground"
+                android:orientation="horizontal"
+                >
 
-            <TextView
-                android:id="@+id/title_text"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:layout_marginRight="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_gravity="center_vertical"
-                android:textColor="?attr/sdf_titleTextColor"
-                android:textAppearance="?android:attr/textAppearanceLarge"
+                <ImageView
+                    android:id="@+id/title_icon"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_gravity="center_vertical"
+                    android:visibility="gone"
+                    />
+
+                <TextView
+                    android:id="@+id/title_text"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_gravity="center_vertical"
+                    android:textColor="?attr/sdf_titleTextColor"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    />
+
+            </LinearLayout>
+
+            <View
+                android:id="@+id/title_divider"
+                android:layout_height="2dp"
+                android:layout_width="match_parent"
+                android:background="?attr/sdf_titleDividerColor"
+                android:visibility="?attr/sdf_titleDividerVisibility"
                 />
 
         </LinearLayout>
-
-        <View
-            android:id="@+id/title_divider"
-            android:layout_height="2dp"
-            android:layout_width="match_parent"
-            android:background="?attr/sdf_titleDividerColor"
-            android:visibility="?attr/sdf_titleDividerVisibility"
-            android:layout_below="@+id/title"
-            />
 
         <LinearLayout
             android:id="@+id/main_view"
@@ -83,10 +91,11 @@
             android:layout_width="match_parent"
             android:layout_margin="10dp"
             android:orientation="vertical"
-            android:layout_below="@+id/title_divider"
+            android:layout_below="@+id/title"
             >
 
             <!--http://stackoverflow.com/a/15961335/4727406-->
+
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
