--- a/src/main/res/menu/tracks.xml
+++ b/src/main/res/menu/tracks.xml
@@ -23,35 +23,36 @@
   -->
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+      xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/menu_visibility_on"
-        android:title="@string/menu_visibility_on"
-        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_action_visibility_on_dark"
-        />
+        android:title="@string/menu_visibility_on"
+        app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/menu_visibility_off"
-        android:title="@string/menu_visibility_off"
-        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_action_visibility_off_dark"
-        />
+        android:title="@string/menu_visibility_off"
+        app:showAsAction="ifRoom"/>
+
+    <item
+        android:id="@+id/menu_share"
+        android:icon="@drawable/ic_action_social_share"
+        android:title="@string/menu_share"
+        app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/menu_delete"
-        android:title="@string/menu_delete"
-        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_action_delete_dark"
-        />
+        android:title="@string/menu_delete"
+        app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/menu_select_all"
-        android:title="@string/menu_select_all"
-        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_action_content_select_all_dark"
-        />
+        android:title="@string/menu_select_all"
+        app:showAsAction="ifRoom"/>
 
 </menu>
