--- a/src/main/res/layout/sdf_layout.xml
+++ b/src/main/res/layout/sdf_layout.xml
@@ -30,10 +30,10 @@
     >
 
     <RelativeLayout
+        android:id="@+id/base"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:background="?attr/sdf_background"
         >
 
         <LinearLayout
