--- a/src/main/res/layout/row_layer.xml
+++ b/src/main/res/layout/row_layer.xml
@@ -26,57 +26,52 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
     android:descendantFocusability="blocksDescendants"
     android:gravity="center_vertical"
-    >
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/ivIcon"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginRight="2dp"
-        android:layout_marginEnd="2dp"
         android:layout_gravity="center"
-        android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        tools:ignore="ContentDescription"
-        />
+        android:layout_marginEnd="2dp"
+        android:layout_marginRight="2dp"
+        android:layout_marginTop="10dp"
+        tools:ignore="ContentDescription"/>
 
     <TextView
         android:id="@+id/tvLayerName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:gravity="center_vertical"
-        android:textAppearance="?android:attr/textAppearanceMedium"
         android:ellipsize="end"
+        android:gravity="center_vertical"
         android:maxLines="2"
-        />
+        android:textAppearance="?android:attr/textAppearanceMedium"/>
 
     <ImageButton
         android:id="@+id/btShow"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:adjustViewBounds="true"
         android:layout_gravity="center"
+        android:adjustViewBounds="true"
         android:background="@null"
-        android:layout_margin="5dp"
-        tools:ignore="ContentDescription"
-        />
+        android:padding="5dp"
+        tools:ignore="ContentDescription"/>
 
     <ImageButton
         android:id="@+id/btMore"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:adjustViewBounds="true"
         android:layout_gravity="center"
-        android:layout_margin="5dp"
+        android:adjustViewBounds="true"
         android:background="@null"
+        android:padding="5dp"
         android:src="?attr/ic_menu_moreoverflow"
-        tools:ignore="ContentDescription"
-        />
+        tools:ignore="ContentDescription"/>
 
 </LinearLayout>
