Add holes to polygon

--- a/src/main/res/menu/edit_multipolygon.xml
+++ b/src/main/res/menu/edit_multipolygon.xml
@@ -43,12 +43,12 @@
         android:icon="@drawable/ic_action_add_polygon"
         android:title="@string/add_polygon"
         />
-    <!--<item-->
-        <!--android:id="@+id/menu_edit_add_new_inner_ring"-->
-        <!--app:showAsAction="ifRoom"-->
-        <!--android:icon="@drawable/ic_action_add_hole"-->
-        <!--android:title="@string/add_hole"-->
-        <!--/>-->
+    <item
+        android:id="@+id/menu_edit_add_new_inner_ring"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_action_add_hole"
+        android:title="@string/add_hole"
+        />
     <item
         android:id="@+id/menu_edit_delete_multipolygon"
         app:showAsAction="ifRoom"
