--- a/src/main/res/menu/edit_polygon.xml
+++ b/src/main/res/menu/edit_polygon.xml
@@ -37,12 +37,12 @@
         android:icon="@drawable/ic_action_add_polygon"
         android:title="@string/add_polygon"
         />
-    <!-- TODO: item
+    <item
         android:id="@+id/menu_edit_add_new_inner_ring"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_action_add_hole"
         android:title="@string/add_hole"
-        /-->
+        />
     <item
         android:id="@+id/menu_edit_delete_polygon"
         app:showAsAction="ifRoom"
