--- a/src/main/res/layout/activity_vectorlayer_settings.xml
+++ b/src/main/res/layout/activity_vectorlayer_settings.xml
@@ -94,6 +94,13 @@
                 android:layout_margin="5dp"
                 android:textAppearance="?android:attr/textAppearanceMedium"/>
 
+            <Button
+                android:id="@+id/layer_fields"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="@string/fields"/>
+
             <TextView
                 style="?android:attr/listSeparatorTextViewStyle"
                 android:layout_width="match_parent"
