--- a/src/main/res/layout/formtemplate_double_spinner.xml
+++ b/src/main/res/layout/formtemplate_double_spinner.xml
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
   ~ Project:  NextGIS Mobile
   ~ Purpose:  Mobile GIS for Android.
-  ~ Author:   Dmitry Baryshnikov (aka Bishop), bishop.dev@gmail.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2012-2016 NextGIS, info@nextgis.com
+  ~ Copyright (c) 2016 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Lesser General Public License as published by
@@ -20,10 +20,13 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<com.nextgis.maplibui.formcontrol.DateTime
-    style="@style/DatePickSpinner"
+<android.support.v7.widget.AppCompatTextView
+    android:id="@android:id/text1"
+    style="?android:attr/spinnerItemStyle"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+    android:ellipsize="marquee"
+    android:singleLine="true"
+    android:textAlignment="inherit"
     android:textColor="?attr/control_disabled"/>
