--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -43,6 +43,7 @@
     <attr name="ic_apply" format="reference"/>
     <attr name="ic_cancel" format="reference"/>
     <attr name="layer_list_background" format="reference"/>
+    <attr name="control_disabled" format="reference"/>
 
     <attr name="sdf_background" format="reference"/>
     <attr name="sdf_titleBackground" format="reference"/>
@@ -73,6 +74,7 @@
         <item name="actionModeBackground">@drawable/action_mode</item>
         <item name="actionMenuTextColor">@color/textColorPrimary.Dark</item>
         <item name="android:editTextStyle">@style/EditTextStyle.Light</item>
+        <item name="control_disabled">@color/control_disabled_light</item>
 
         <item name="ic_action_visibility_on_inverse">@drawable/ic_action_visibility_on_dark</item>
         <item name="ic_action_visibility_on">@drawable/ic_action_visibility_on_light</item>
@@ -116,6 +118,7 @@
         <item name="actionModeBackground">@drawable/action_mode</item>
         <item name="actionMenuTextColor">@color/textColorPrimary.Dark</item>
         <item name="android:editTextStyle">@style/EditTextStyle.Dark</item>
+        <item name="control_disabled">@color/control_disabled_dark</item>
 
         <item name="ic_action_visibility_on_inverse">@drawable/ic_action_visibility_on_light</item>
         <item name="ic_action_visibility_on">@drawable/ic_action_visibility_on_dark</item>
