--- a/src/main/res/menu/edit_by_walk.xml
+++ b/src/main/res/menu/edit_by_walk.xml
@@ -6,7 +6,7 @@
   ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2012-2015. NextGIS, info@nextgis.com
+  ~ Copyright (c) 2012-2016 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Lesser Public License as published by
@@ -23,24 +23,22 @@
   -->
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
-    <item
-        android:id="@+id/menu_cancel"
-        android:title="@string/cancel"
-        app:showAsAction="always"
-        android:icon="@drawable/ic_action_cancel_dark"
-        />
+      xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item
         android:id="@+id/menu_add_geometry"
-        android:title="@string/action_edit"
-        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_action_edit_light"
-        />
+        android:title="@string/action_edit"
+        android:visible="false"
+        app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/menu_settings"
-        android:title="@string/action_settings"
-        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_action_settings_dark"
-        />
+        android:title="@string/action_settings"
+        app:showAsAction="ifRoom"/>
+    <item
+        android:id="@+id/menu_edit_save"
+        android:icon="@drawable/ic_action_save"
+        android:title="@string/save"
+        app:showAsAction="always"/>
 </menu>
