--- a/src/main/res/menu/edit_geometry.xml
+++ b/src/main/res/menu/edit_geometry.xml
@@ -24,6 +24,16 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/menu_edit_undo"
+        android:icon="@drawable/ic_action_undo_dark"
+        android:title="@string/undo"
+        app:showAsAction="always"/>
+    <item
+        android:id="@+id/menu_edit_redo"
+        android:icon="@drawable/ic_action_redo_dark"
+        android:title="@string/redo"
+        app:showAsAction="always"/>
+    <item
         android:id="@+id/menu_edit_save"
         android:icon="@drawable/ic_action_save"
         android:title="@string/save"
