--- a/src/main/res/menu/layer_popup.xml
+++ b/src/main/res/menu/layer_popup.xml
@@ -6,7 +6,7 @@
   ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2012-2015. NextGIS, info@nextgis.com
+  ~ Copyright (c) 2012-2016 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Lesser Public License as published by
@@ -46,14 +46,21 @@
         />
 
     <item
+        android:id="@+id/menu_edit"
+        android:title="@string/action_edit"
+        android:orderInCategory="4"
+        android:visible="false"
+        />
+
+    <item
         android:id="@+id/menu_delete"
         android:title="@string/menu_delete"
-        android:orderInCategory="4"
+        android:orderInCategory="5"
         />
     <item
         android:id="@+id/menu_settings"
         android:title="@string/action_settings"
-        android:orderInCategory="5"
+        android:orderInCategory="6"
         />
 
 </menu>
