--- a/src/main/res/values-ru/arrays.xml
+++ b/src/main/res/values-ru/arrays.xml
@@ -6,7 +6,7 @@
   ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2012-2015. NextGIS, info@nextgis.com
+  ~ Copyright (c) 2012-2016 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Lesser Public License as published by
@@ -52,6 +52,11 @@
         <item>20 мин</item>
         <item>30 мин</item>
         <item>45 мин</item>
+    </string-array>
+    <string-array name="status_panel_mode">
+        <item>Не показывать панель</item>
+        <item>Показывать только вне редактирования</item>
+        <item>Показывать всегда</item>
     </string-array>
     <string-array name="current_location_mode">
         <item>Не показывать текущее местоположение</item>
