--- a/src/main/res/values-uk/arrays.xml
+++ b/src/main/res/values-uk/arrays.xml
@@ -32,53 +32,53 @@
         <item>2</item>
     </string-array>
     <string-array name="tracker_min_dist_update">
-        <item>Most frequently</item>
-        <item>1 m</item>
-        <item>5 m</item>
-        <item>10 m</item>
-        <item>25 m</item>
-        <item>50 m</item>
-        <item>75 m</item>
-        <item>100 m</item>
-        <item>150 m</item>
-        <item>200 m</item>
-        <item>300 m</item>
+        <item>Якнайчастіше</item>
+        <item>1 м</item>
+        <item>5 м</item>
+        <item>10 м</item>
+        <item>25 м</item>
+        <item>50 м</item>
+        <item>75 м</item>
+        <item>100 м</item>
+        <item>150 м</item>
+        <item>200 м</item>
+        <item>300 м</item>
     </string-array>
     <string-array name="tracker_min_time_between_updates">
-        <item>Most frequently</item>
-        <item>1 sec</item>
-        <item>2 sec</item>
-        <item>5 sec</item>
-        <item>10 sec</item>
-        <item>20 sec</item>
-        <item>30 sec</item>
-        <item>45 sec</item>
-        <item>1 min</item>
-        <item>2 min</item>
-        <item>5 min</item>
-        <item>10 min</item>
-        <item>20 min</item>
-        <item>30 min</item>
-        <item>45 min</item>
+        <item>Якнайчастіше</item>
+        <item>1 сек</item>
+        <item>2 сек</item>
+        <item>5 сек</item>
+        <item>10 сек</item>
+        <item>20 сек</item>
+        <item>30 сек</item>
+        <item>45 сек</item>
+        <item>1 хв</item>
+        <item>2 хв</item>
+        <item>5 хв</item>
+        <item>10 хв</item>
+        <item>20 хв</item>
+        <item>30 хв</item>
+        <item>45 хв</item>
     </string-array>
     <string-array name="status_panel_mode">
-        <item>Do not show info panel</item>
-        <item>Show out edit mode</item>
-        <item>Always show</item>
+        <item>Не показувати панель</item>
+        <item>Показувати поза редагуванням</item>
+        <item>Показувати завжди</item>
     </string-array>
     <string-array name="current_location_mode">
-        <item>Do not show current location</item>
-        <item>Show marker only</item>
-        <item>Show marker and accuracy radius</item>
+        <item>Не показувати положення</item>
+        <item>Показувати лише маркер</item>
+        <item>Показувати маркер та коло точності</item>
     </string-array>
     <string-array name="tms_tile_cache_size">
-        <item>No cache</item>
-        <item>1 screen</item>
-        <item>2 screens (recommended)</item>
-        <item>3 screens</item>
+        <item>Не кешувати</item>
+        <item>1 екран</item>
+        <item>2 екрана (рекомендовано)</item>
+        <item>3 екрана</item>
     </string-array>
     <string-array name="theme">
-        <item>Light</item>
-        <item>Dark</item>
+        <item>Світла</item>
+        <item>Темна</item>
     </string-array>
 </resources>
